--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -181,7 +181,7 @@ https://zksync.io/api/v0.1.html (KEEP AN EYE OUT FOR V2 DOCS AS WELL)
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 
-Add to resources page: https://dune.com/21co/solana-key-metrics
+For all array values with keys INSIDE the values (charts and price alerts, price target alerts, etc), add input validation that checks for duplicate keys, by modifying the stristr_array function to not only return the array key of first match, but return HOW MANY MATCHES too (by returning a results array [position, count]).
 
 
 Move all admin-related functions into the new 'ct_admin' PHP class.
