--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -181,6 +181,12 @@ https://zksync.io/api/v0.1.html (KEEP AN EYE OUT FOR V2 DOCS AS WELL)
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 
+Do a bitcoin timestamp for v6.00.33
+
+
+Document downloading / using 7zip on windows for windows users (for windows desktop edition).
+
+
 Make the background task on the desktop edition cycle through showing that it's running too, while other tasks are also running, like we have loading charts / news feeds do. 
 
 
